syntax = "proto3";

package gateway;

option go_package = "github.com/martinmhan/tweet-app-api/cmd/apigateway/proto";

service APIGateway {
  rpc loginUser(User) returns (JWT) {}
  rpc createUser(User) returns (SimpleResponse) {}
  rpc createFollow(UserID) returns(SimpleResponse) {}
  rpc createTweet(Tweet) returns(SimpleResponse) {}
  rpc getFollowers(UserID) returns(Follows) {}
  rpc getFollowees(UserID) returns(Follows) {}
  rpc getTweets(UserID) returns(Tweets) {}
  rpc getTimeline(UserID) returns(Tweets) {}
}

message JWT {
  string JWT = 1;
}

message SimpleResponse {
  string Message = 1;
}

message User {
  string Username = 1;
  string Password = 2;
}

message UserID {
  string UserID = 1;
}

message Follow {
  string FollowerUserID = 1;
  string FollowerUsername = 2;
  string FolloweeUserID = 3;
  string FolloweeUsername = 4;
}

message Follows {
  repeated Follow Follows = 1;
}

message Tweet {
  string ID = 1;
  string UserID = 2;
  string Username = 3;
  string Text = 4;
}

message Tweets {
  repeated Tweet Tweets = 1;
}
